service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-tasks-service
spec:
  type: NodePort
  selector:
    app: spring-app-tasks
  ports:   
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
    nodePort: 31985
