ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-tasks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: springboot.tasks.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-tasks-service
                port:
                  number: 8080
